update location
